--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,13 @@ jobs:
           script: |
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            
+
             cd /home/ubuntu/maidease-backend
             source venv/bin/activate
             git fetch origin
             git pull origin deploy
             pip install -r requirements.txt
-            pm2 restart backend
+            pm2 restart 0
             pm2 save
 
 
